# orchestrai-audio

./: .gitignore  Dockerfile  OVERVIEW.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py
app/api/: __init__.py
app/core/: __init__.py  config.py  database.py
app/graph/: __init__.py  state.py  workflow.py
app/graph/subgraphs/: __init__.py  ambient_session.py  audiobook.py  custom_timeline.py  music_session.py  pomodoro_session.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  backend_routing_service.py  cache_service.py  music_service.py  planning_service.py  request_parser.py  routing_service.py  run_service.py  stitching_service.py  template_retrieval_service.py  validation_service.py  voice_service.py
app/storage/: __init__.py  artifacts.py  run_repository.py
docs/: PHASE_LOG.md  ROADMAP.md
scripts/: phase0_check.py  run_demo.py
templates/: plan_templates.json
tests/: test_backend_routing_service.py  test_cache_service.py  test_planning_service.py  test_request_parser.py  test_stitching_service.py  test_template_retrieval_service.py  test_validation_service.py  test_voice_service.py
