[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestrai-audio"
version = "0.1.0"
description = "A beginner-friendly agentic audio workflow engine built in small phases."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ayush Gupta" }
]
dependencies = [
  "langgraph",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]
